--- a/Test/Result.html
+++ b/Test/Result.html
@@ -8,13 +8,15 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="mbti_box">
-        당신은 너무너무 웃긴 INFJ 이예빈입니다.
-    </div>
-    <div class="chk_box">
-        <button>
-            확인
-        </button>
+    <div class="content">
+        <div class="mbti_box">
+            당신은 너무너무 웃긴 INFJ 이예빈입니다.
+        </div>
+        <div class="chk_box">
+            <button>
+                확인
+            </button>
+        </div>
     </div>
 </body>
 </html>
