--- a/Test/Test.html
+++ b/Test/Test.html
@@ -8,16 +8,18 @@
     <title>Test</title>
 </head>
 <body>
-    <div class="QnA_box">
-        질문이도다.
-    </div>
-        <div class="select_btn">
-            <div>
-                <button >선택1</button>
-            </div>  
-            <div>
-                <button >선택2</button>
-            </div>
+    <div class="content">
+        <div class="QnA_box">
+            <p>질문이도다.</p> 
         </div>
+            <div class="select_btn">
+                <div>
+                    <button >선택1</button>
+                </div>  
+                <div>
+                    <button >선택2</button>
+                </div>
+            </div>
+    </div>
 </body>
 </html>
