--- a/home/house.html
+++ b/home/house.html
@@ -8,17 +8,19 @@
     <title>Document</title> 
 </head>
 <body>
-    <div class="link_box">
-        <button id="house_icon">집</button>
-        <button id="link_btn">링크</button>
-    </div>
-    <div class="btn_box">
-        <button>글 쓰러 가기</button>
-        <button>글 보러 가기</button>
-        <button>친구 추가 하기</button>
-    </div>
-    <div class="small_btn">
-        <button>나의 MBTI?</button>
+    <div class="content">
+        <div class="link_box">
+            <button id="house_icon">집</button>
+            <button id="link_btn">링크</button>
+        </div>
+        <div class="btn_box">
+            <button>글 쓰러 가기</button>
+            <button>글 보러 가기</button>
+            <button>친구 추가 하기</button>
+        </div>
+        <div class="small_btn">
+            <button>나의 MBTI?</button>
+        </div>
     </div>
     
 </body>
