--- a/home/save.html
+++ b/home/save.html
@@ -8,15 +8,21 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="bottom_box">
-        <div class="box_open">
-            <img src="../Image/box_open.png" />
+    <div class="content">
+        <!--홈 아이콘 -->
+        <div class="nav_box">
+            <button id="house_icon">집</button>
         </div>
-        <!--나의 MBTI 확인 버튼-->
-        <div class="MBTI_chk">
-            <button id="chk_btn"> 나의 MBTI? </button>
-        </div>
+            <div class="memo_box">
+                <img src="../Image/memo.png" />
+            </div>
+            <div class="box_open">
+                <img src="../Image/box_open.png" />
+            </div>
+            <!--나의 MBTI 확인 버튼-->
+            <div class="MBTI_chk">
+                <button id="chk_btn"> 나의 MBTI? </button>
+            </div>
     </div>
-
 </body>
 </html>
