--- a/home/password.html
+++ b/home/password.html
@@ -8,24 +8,26 @@
     <title>Document</title>
 </head>
 <body>
-    <!--홈 아이콘 -->
-    <div class="nav_box">
-        <button id="house_icon">집</button>
-    </div>
-
-    <form class="pw_form">
-        <div>
-            <input id="pw_txt" type="password" name="txt_pw" placeholder="비밀번호" >
+    <div class="content">
+        <!--홈 아이콘 -->
+        <div class="nav_box">
+            <button id="house_icon">집</button>
         </div>
-        <div>
-            <input id="pw_chk"  type="submit" name="pw_sumit" value="확인"> 
-        </div>
-    </form>
 
-    </body>
-    <!--MBTI확인 버튼 -->
-    <div class="MBTI_chk">
-        <button id="chk_btn"> 나의 MBTI? </button>
+        <form class="pw_form">
+            <div>
+                <input id="pw_txt" type="password" name="txt_pw" placeholder="비밀번호" >
+            </div>
+            <div>
+                <input id="pw_chk"  type="submit" name="pw_sumit" value="확인"> 
+            </div>
+        </form>
+
+        </body>
+        <!--MBTI확인 버튼 -->
+        <div class="MBTI_chk">
+            <button id="chk_btn"> 나의 MBTI? </button>
+        </div>
     </div>
 </body>
 </html>
