--- a/home/text.html
+++ b/home/text.html
@@ -8,20 +8,22 @@
     <title>Document</title>
 </head>
 <body>
-    <!--홈 아이콘 -->
-    <div class="nav_box">
-        <button id="house_icon">집</button>
-    </div>
-    <from>
-        <input id="txtName" name="txtName" type="text" placeholder="보내는 사람 이름을 적어주세요">
-        <textarea id="txtContent" name="txtContent" type="text" placeholder="메세지를 입력해주세요" 
-        maxlength="500" ></textarea>
-        <input type="submit" id="txtSumit" name="txtSumit" value="보내기" >
-    </from>
+    <div class="content">
+        <!--홈 아이콘 -->
+        <div class="link_box">
+            <button id="house_icon">집</button>
+        </div>
+        <form>
+            <input id="txtName" name="txtName" type="text" placeholder="보내는 사람 이름(별명)을 적어주세요">
+            <textarea id="txtContent" name="txtContent" type="text" placeholder="메세지를 입력해주세요" 
+            maxlength="500" ></textarea>
+            <input type="submit" id="txtSumit" name="txtSumit" value="보내기" >
+        </form>
 
-    <!--나의 MBTI 확인 버튼-->
-    <div class="MBTI_chk">
-        <button id="chk_btn"> 나의 MBTI? </button>
+        <!--나의 MBTI 확인 버튼-->
+        <div class="MBTI_chk">
+            <button id="chk_btn"> 나의 MBTI? </button>
+        </div>
     </div>
     </body>
 </html>
