--- a/Test/Result.html
+++ b/Test/Result.html
@@ -10,7 +10,10 @@
 <body>
     <div class="content">
         <div class="mbti_box">
-            당신은 너무너무 웃긴 INFJ 이예빈입니다.
+            당신은 너무너무 ~~ 한 성격을 가졌고,
+            <br>
+            ```합니다
+            ~~할 것입니다
         </div>
         <div class="chk_box">
             <button>
