--- a/home/house.html
+++ b/home/house.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title> 
+    <title>house</title> 
 </head>
-<body>
+<body> 
     <div class="content">
-        <div class="link_box">
-            <button id="house_icon">집</button>
-            <button id="link_btn">링크</button>
+        <div class="nav_box">
+            <img id="home_icon" src="../Image/home.png" alt="">
+            <img id="link_btn" src="../Image/link.png" alt="">
         </div>
         <div class="btn_box">
             <button>글 쓰러 가기</button>
