--- a/home/password.html
+++ b/home/password.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>password</title>
 </head>
 <body>
     <div class="content">
         <!--홈 아이콘 -->
         <div class="nav_box">
-            <button id="house_icon">집</button>
+            <img id="home_icon" src="../Image/home.png" alt="">
         </div>
 
         <form class="pw_form">
@@ -22,8 +22,6 @@
                 <input id="pw_chk"  type="submit" name="pw_sumit" value="확인"> 
             </div>
         </form>
-
-        </body>
         <!--MBTI확인 버튼 -->
         <div class="MBTI_chk">
             <button id="chk_btn"> 나의 MBTI? </button>
