--- a/home/text.html
+++ b/home/text.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>text</title>
 </head>
 <body>
     <div class="content">
         <!--홈 아이콘 -->
-        <div class="link_box">
-            <button id="house_icon">집</button>
+        <div class="nav_box">
+            <img id='home_icon' src="../Image/home.png" />
         </div>
         <form>
             <input id="txtName" name="txtName" type="text" placeholder="보내는 사람 이름(별명)을 적어주세요">
