--- a/home/check.html
+++ b/home/check.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="./save.css" type="text/css">
+    <link rel="stylesheet" href="./check.css" type="text/css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>save</title>
+    <title>check</title>
 </head>
 <body>
     <div class="content">
@@ -16,9 +16,13 @@
             <div class="memo_box">
                 <img src="../Image/memo.png" />
             </div>
+            <div class="check_box">
+                <button> 확인 </button>
+            </div>
             <div class="box_open">
                 <img src="../Image/box_open.png" />
             </div>
+            
             <!--나의 MBTI 확인 버튼-->
             <div class="MBTI_chk">
                 <button id="chk_btn"> 나의 MBTI? </button>
